--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 :root {
   --white: #ffffff;
+  --white-second: #eeeeee;
   --black: #000000;
   --black-second: #212121;
   --gray-second: #2f303a;
   --gray-footer: rgba(255, 255, 255, 0.6);
   --gray: #757575;
   --button-color: #f5f4fa;
-  --color-team: #f5f4fa;
   --blue: #2196f3;
+  --slider-color: rgba(47, 48, 58, 0.4);
+  --shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  --animation: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 * {
@@ -122,7 +125,7 @@ ul {
   width: 100%;
   height: 4px;
   margin-top: 29px;
-  background: #2196f3;
+  background: var(--blue);
   border-radius: 2px;
   position: absolute;
   top: 100%;
@@ -197,7 +200,7 @@ ul {
   content: '';
   width: 100%;
   height: 600px;
-  background: rgba(47, 48, 58, 0.4);
+  background: var(--slider-color);
   display: flex;
   position: absolute;
   top: 0;
@@ -223,7 +226,7 @@ ul {
 
 .slider__button {
   background: var(--blue);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: var(--shadow);
   border-radius: 4px;
   cursor: pointer;
   height: 50px;
@@ -242,9 +245,9 @@ ul {
 .modal-window__button-send-send:focus {
   background: var(--button-color);
   color: var(--blue);
-  border-color: #2196f3;
+  border-color: var(--blue);
   border: double;
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
 }
 
 /* <!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --> */
@@ -328,7 +331,7 @@ ul {
 /* <!-- O U R  T E A M --><!-- O U R  T E A M --><!-- O U R  T E A M --><!-- O U R  T E A M --> */
 
 .team__background {
-  background: var(--color-team);
+  background: var(--button-color);
 }
 
 .team__container {
@@ -405,7 +408,7 @@ ul {
   background-color: var(--blue);
   cursor: pointer;
   fill: var(--white);
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
 }
 
 .customers__list {
@@ -447,7 +450,7 @@ ul {
 .customers__unit:focus {
   fill: var(--blue);
   border-color: var(--blue);
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
   cursor: pointer;
 }
 
@@ -533,7 +536,7 @@ ul {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white);
 }
 
 .footer__social {
@@ -556,7 +559,7 @@ ul {
 .footer__social__item:hover {
   fill: var(--white);
   background: var(--blue);
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
   cursor: pointer;
 }
 
@@ -572,11 +575,11 @@ ul {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(var(--shadow));
   border-radius: 4px;
   resize: none;
-  background: #2f303a;
-  color: rgba(255, 255, 255, 0.6);
+  background: var(--gray-second);
+  color: var(--gray-footer);
   font-size: 16px;
 }
 
@@ -587,7 +590,7 @@ ul {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--gray-footer);
 }
 
 .footer__button {
@@ -597,7 +600,7 @@ ul {
 
 .footer__button__icon {
   background: var(--blue);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: var(--shadow);
   border-radius: 4px;
   width: 200px;
   height: 50px;
@@ -626,7 +629,7 @@ ul {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
   z-index: 2;
 }
 
@@ -634,7 +637,7 @@ ul {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
 }
 
 .modal-window__content {
@@ -656,7 +659,7 @@ ul {
   margin-top: 8px;
   width: 30px;
   height: 30px;
-  background: #ffffff;
+  background: var(--white);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: flex;
@@ -674,7 +677,7 @@ ul {
 .modal-windows__button-close:hover,
 .modal-windows__button-close:focus {
   fill: var(--blue);
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
 }
 
 .modal-window__heading {
@@ -684,7 +687,7 @@ ul {
   line-height: 23px;
   letter-spacing: 0.03em;
   text-align: center;
-  color: #212121;
+  color: var(--black-second);
   margin-top: 2px;
   margin-bottom: 12px;
 }
@@ -736,7 +739,7 @@ input {
 
 input:focus,
 textarea:focus {
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
   border-color: var(--blue);
   outline: none;
 }
@@ -788,7 +791,7 @@ input:checked::before {
   letter-spacing: 0.06em;
   text-align: center;
   background: var(--blue);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: var(--shadow);
   border-radius: 4px;
   border: none;
   cursor: pointer;
@@ -900,15 +903,13 @@ input:checked::before {
 }
 
 .products__picture {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
+  background: var(--white);
+  border: 1px solid var(--white-second);
   position: relative;
 }
 
 .products__picture:hover,
 .products__picture:focus {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -926,7 +927,7 @@ input:checked::before {
   width: 100%;
   height: 100%;
   transform: translatey(100%);
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: var(--animation);
   background: rgba(33, 150, 243, 0.9);
 }
 
