--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -36,8 +36,8 @@ ul {
 }
 
 .article__unit,
-.offer__image,
-.team__person,
+.offer_item,
+.team__list,
 .address,
 .button__unit,
 .products__picture {
