--- a/css/main.css
+++ b/css/main.css
@@ -90,13 +90,28 @@ ul {
           justify-content: space-between;
 }
 
+.navbar__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 80px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 1200px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .navbar__menu {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .logo {
+  position: relative;
   text-decoration: none;
   font-family: "Raleway";
   font-size: 26px;
@@ -145,7 +160,7 @@ ul {
   display: block;
   width: 100%;
   height: 4px;
-  margin-top: 25px;
+  margin-top: 28px;
   background: var(--blue);
   border-radius: 2px;
   position: absolute;
