--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -15,11 +15,20 @@
   justify-content: space-between;
 }
 
+.navbar__container {
+  display: flex;
+  height: 80px;
+  align-items: center;
+  width: 1200px;
+  justify-content: space-between;
+}
+
 .navbar__menu {
-  display: inline-flex;
+  display: flex;
 }
 
 .logo {
+  position: relative;
   text-decoration: none;
   font-family: 'Raleway';
   font-size: 26px;
@@ -62,7 +71,7 @@
   display: block;
   width: 100%;
   height: 4px;
-  margin-top: 25px;
+  margin-top: 28px;
   background: var(--blue);
   border-radius: 2px;
   position: absolute;
