--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -10,16 +10,13 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
+  display: flex;
+  padding-top: 60px;
+  gap: 70px;
 }
 
 .logo--color-footer {
   color: var(--white);
-}
-
-.footer__body {
-  display: flex;
-  padding-top: 60px;
-  gap: 70px;
 }
 
 .footer__logo--style {
@@ -89,6 +86,14 @@
   margin-top: 20px;
 }
 
+.social__icon-footer {
+  width: 40px;
+  height: 40px;
+  fill: #afb1b8;
+  border-radius: 50%;
+  background-color: var(--social-background);
+}
+
 .footer__social__item {
   display: flex;
   align-items: center;
@@ -100,16 +105,11 @@
   background: rgba(255, 255, 255, 0.1);
 }
 
-.footer__social__item:hover {
+.social__icon-footer:hover {
   fill: var(--white);
   background: var(--blue);
   transition: var(--animation);
   cursor: pointer;
-}
-
-.social__icon {
-  width: 20px;
-  height: 20px;
 }
 
 .footer__textarea {
