--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -24,6 +24,11 @@
   justify-content: space-between;
 }
 
+.navbar__container--left {
+  display: flex;
+  align-items: center;
+}
+
 .navbar__menu {
   display: flex;
 }
