--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -62,19 +62,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  fill: #afb1b8;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
+
+  gap: 10px;
   background-color: var(--white);
 }
 
 .social__icon {
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
+  fill: #afb1b8;
+  border-radius: 50%;
 }
 
-.social__container:hover {
+.social__icon:hover {
   background-color: var(--blue);
   cursor: pointer;
   fill: var(--white);
