--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,4 +11,5 @@
   --slider-color: rgba(47, 48, 58, 0.4);
   --shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   --animation: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  --social-background: rgba(255, 255, 255, 0.1);
 }
